[project]
name = "vampire"
version = "4.8.0"
authors = [{name="Philip Zucker", email= "philzook58@gmail.com"}]
description = "Automated Theorem Prover"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/philzook58/pyvampire"

[tool.setuptools.packages.find]
where = ["vampire"]